Prevent overflow (#970)
* Prevent overflow

* Update generated css

* Move find in page outside component

* Add forward and back navigation

* Avoid passing around editor where unecessary

* remove old decorations and scroll closer to top

* Show hover tooltips

* npm run generate

* Pretty hover

* Address sqs and beyang comments

* Fix legacy code font

* Track hover provided

* Add super important newline at end of file

--- a/ui/web_modules/sourcegraph/app/styles/App.css
+++ b/ui/web_modules/sourcegraph/app/styles/App.css
@@ -14,7 +14,7 @@ the entire viewport height.
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	min-height: 100vh;
+	height: 100vh;
 }
 .main_content {
 	display: flex;
